Changes in version 1.2.3
------------------------

Changes in version 1.2.2
------------------------

  * implemented Digi-Blaster emulation
  * added limited support for error information in D64 files
  * new option for setting SID model (6581 or 8580) to be emulated
  * P00 format files can be loaded
  * emulation speed percentage is now displayed on the title bar; it is
    also possible to set half, double, etc. speed in the menu
  * the head position (track, side, and sector) of all floppy drives
    can be displayed in a window

Changes in version 1.2.1
------------------------

  * TED emulation improvements; also fixed a bug introduced in version
    1.1.1
  * the frame rate in full speed mode is now limited to a maximum of
    50 Hz to improve performance
  * minor bug fixes

Changes in version 1.2.0
------------------------

  * many improvements in the TV emulation; to enable all the new
    features, use OpenGL mode and set the display quality to 3 (requires
    OpenGL 2.0 or newer and shader support)
  * added a tedmon-like monitor to the debugger; it supports all the
    commands, including assemble, but there are also some improvements
    and additional features (use ? to print the list of commands, or ? N
    for help on command N)
  * it is now possible to set breakpoints on TED video positions in the
    debugger
  * trace command in the monitor for logging CPU instructions to a text
    file; when debugging the main CPU, the TED video position at the
    first cycle of each opcode is also logged
  * light pen emulation
  * hardware level 1526/MPS-802 printer emulation
  * the file I/O ROM module now also includes a tape turbo; to enable
    it, set $0647 to $17, $27, $37, or $47 to select speed (from slowest
    to fastest), and use device 7 when saving
  * tape playback and recording can be sent to the sound output
  * the RAM startup pattern has been made configurable
  * minor TED emulation improvements
  * various bug fixes
