@@ -22,41 +22,52 @@
 
 #include <cmath>
 
-static const float phaseShiftTable[16] = {
+static const float phaseShiftTable[18] = {
      0.0f,   33.0f,  327.0f,    0.0f,   33.0f,  327.0f,    0.0f,    0.0f,
-     0.0f,   33.0f,   33.0f,    0.0f,    0.0f,  327.0f,  327.0f,    0.0f
+     0.0f,   33.0f,   33.0f,    0.0f,    0.0f,  327.0f,  327.0f,    0.0f,
+     0.0f,    0.0f
 };
 
-static const float yScaleTable[16] = {
+static const float yScaleTable[18] = {
      1.0f,    1.0f,    1.0f,    1.0f,    1.0f,    1.0f,    1.0f,    0.0f,
-     1.0f,    1.0f,    1.0f,    1.0f,    1.0f,    1.0f,    1.0f,    1.0f
+     1.0f,    1.0f,    1.0f,    1.0f,    1.0f,    1.0f,    1.0f,    1.0f,
+     1.0f,    1.0f
 };
 
-static const float uScaleTable[16] = {
+static const float uScaleTable[18] = {
      1.0f,    1.0f,    1.0f,    1.0f,    1.0f,    1.0f,    0.0f,    0.0f,
-     1.0f,    1.0f,    1.0f,    1.0f,    1.0f,    1.0f,    1.0f,    1.0f
+     1.0f,    1.0f,    1.0f,    1.0f,    1.0f,    1.0f,    1.0f,    1.0f,
+     1.0f,    1.0f
 };
 
-static const float vScaleTable[16] = {
+static const float vScaleTable[18] = {
      1.0f,    1.0f,    1.0f,   -1.0f,   -1.0f,   -1.0f,    0.0f,    0.0f,
-     1.0f,    1.0f,   -1.0f,   -1.0f,    1.0f,    1.0f,   -1.0f,   -1.0f
+     1.0f,    1.0f,   -1.0f,   -1.0f,    1.0f,    1.0f,   -1.0f,   -1.0f,
+     1.0f,   -1.0f
+};
+
+static const bool ntscModeTable[18] = {
+  false, false,  true, false, false,  true, false, false,
+  false, false, false, false,  true,  true,  true,  true,
+   true,  true
 };
 
 static const unsigned short colormapIndexTable[32] = {
   0x0000, 0x0200, 0x0300, 0x0500, 0x0300, 0x0500, 0x0000, 0x0200,
   0x0800, 0x0D00, 0x0B00, 0x0E00, 0x0B00, 0x0E00, 0x0800, 0x0D00,
-  0x0100, 0x0000, 0x0100, 0x0000, 0x0400, 0x0300, 0x0400, 0x0300,
+  0x0100, 0x1000, 0x0100, 0x1000, 0x0400, 0x1100, 0x0400, 0x1100,
   0x0900, 0x0C00, 0x0900, 0x0C00, 0x0A00, 0x0F00, 0x0A00, 0x0F00
 };
 
 namespace Plus4Emu {
 
-  void VideoDisplay::DisplayParameters::defaultIndexToRGBFunc(uint8_t color,
-                                                              float& red,
-                                                              float& green,
-                                                              float& blue)
+  void VideoDisplay::DisplayParameters::defaultIndexToYUVFunc(
+      uint8_t color, bool isNTSC, float& y, float& u, float& v)
   {
-    blue = green = red = (float(color) / 255.0f);
+    (void) isNTSC;
+    y = float(color) / 255.0f;
+    u = 0.0f;
+    v = 0.0f;
   }
 
   void VideoDisplay::DisplayParameters::copyDisplayParameters(
@@ -68,10 +79,10 @@ namespace Plus4Emu {
     bufferingMode = (src.bufferingMode > 0 ?
                      (src.bufferingMode < 2 ? src.bufferingMode : 2) : 0);
     ntscMode = src.ntscMode;
-    if (src.indexToRGBFunc)
-      indexToRGBFunc = src.indexToRGBFunc;
+    if (src.indexToYUVFunc)
+      indexToYUVFunc = src.indexToYUVFunc;
     else
-      indexToRGBFunc = &defaultIndexToRGBFunc;
+      indexToYUVFunc = &defaultIndexToYUVFunc;
     brightness = (src.brightness > -0.5 ?
                   (src.brightness < 0.5 ? src.brightness : 0.5)
                   : -0.5);
@@ -126,7 +137,7 @@ namespace Plus4Emu {
     : displayQuality(2),
       bufferingMode(0),
       ntscMode(false),
-      indexToRGBFunc(&defaultIndexToRGBFunc),
+      indexToYUVFunc(&defaultIndexToYUVFunc),
       brightness(0.0), contrast(1.0), gamma(1.0), saturation(1.0),
       redBrightness(0.0), redContrast(1.0), redGamma(1.0),
       greenBrightness(0.0), greenContrast(1.0), greenGamma(1.0),
@@ -151,27 +162,15 @@ namespace Plus4Emu {
     return (*this);
   }
 
-  void VideoDisplay::DisplayParameters::applyColorCorrection(float& red,
-                                                             float& green,
-                                                             float& blue) const
+  void VideoDisplay::DisplayParameters::yuvToRGBWithColorCorrection(
+      float& red, float& green, float& blue, float y, float u, float v) const
   {
-    double  r = red;
-    double  g = green;
-    double  b = blue;
-    // Y = (0.299 * R) + (0.587 * G) + (0.114 * B)
-    // U = 0.492 * (B - Y)
-    // V = 0.877 * (R - Y)
-    double  y = (0.299 * r) + (0.587 * g) + (0.114 * b);
-    double  u = 0.492 * (b - y);
-    double  v = 0.877 * (r - y);
-    u = u * saturation;
-    v = v * saturation;
     // R = (V / 0.877) + Y
     // B = (U / 0.492) + Y
     // G = (Y - ((R * 0.299) + (B * 0.114))) / 0.587
-    r = (v / 0.877) + y;
-    b = (u / 0.492) + y;
-    g = (y - ((r * 0.299) + (b * 0.114))) / 0.587;
+    double  r = (double(v) * saturation / 0.877) + double(y);
+    double  b = (double(u) * saturation / 0.492) + double(y);
+    double  g = (double(y) - ((r * 0.299) + (b * 0.114))) / 0.587;
     r = std::pow((r > 0.0 ? r : 0.0), 1.0 / gamma);
     g = std::pow((g > 0.0 ? g : 0.0), 1.0 / gamma);
     b = std::pow((b > 0.0 ? b : 0.0), 1.0 / gamma);
@@ -226,7 +225,7 @@ namespace Plus4Emu {
   template <typename T>
   VideoDisplayColormap<T>::VideoDisplayColormap()
   {
-    colormapData = new T[256 * 16];
+    colormapData = new T[256 * 18];
     try {
       colormapTable = new T*[256];
     }
@@ -234,7 +233,7 @@ namespace Plus4Emu {
       delete[] colormapData;
       throw;
     }
-    for (size_t i = 0; i < 0x1000; i++)
+    for (size_t i = 0; i < 0x1200; i++)
       colormapData[i] = T(0);
     for (size_t i = 0; i < 256; i++) {
       T       *p = &(colormapData[0x0700]);
@@ -262,29 +261,27 @@ namespace Plus4Emu {
       const VideoDisplay::DisplayParameters& displayParameters, bool yuvFormat)
   {
     float   baseColormap[768];
-    for (size_t i = 0; i < 256; i++) {
-      float   r = float(int(i)) / 255.0f;
-      float   g = r;
-      float   b = r;
-      if (displayParameters.indexToRGBFunc)
-        displayParameters.indexToRGBFunc(uint8_t(i), r, g, b);
-      // Y = (0.299 * R) + (0.587 * G) + (0.114 * B)
-      // U = 0.492 * (B - Y)
-      // V = 0.877 * (R - Y)
-      float   y = (0.299f * r) + (0.587f * g) + (0.114f * b);
-      float   u = 0.492f * (b - y);
-      float   v = 0.877f * (r - y);
-      baseColormap[i * 3 + 0] = y;
-      baseColormap[i * 3 + 1] = u;
-      baseColormap[i * 3 + 2] = v;
-    }
-    for (size_t i = 0; i < 0x1000; i++) {
+    bool    prvNTSCMode = !(ntscModeTable[0]);
+    for (size_t i = 0; i < 0x1200; i++) {
       size_t  j = i & 0xFF;
       size_t  k = i >> 8;
+      if (ntscModeTable[k] != prvNTSCMode) {
+        prvNTSCMode = ntscModeTable[k];
+        for (size_t l = 0; l < 256; l++) {
+          float   y = float(int(l)) / 255.0f;
+          float   u = 0.0f;
+          float   v = 0.0f;
+          if (displayParameters.indexToYUVFunc)
+            displayParameters.indexToYUVFunc(uint8_t(l), prvNTSCMode, y, u, v);
+          baseColormap[l * 3 + 0] = y;
+          baseColormap[l * 3 + 1] = u;
+          baseColormap[l * 3 + 2] = v;
+        }
+      }
       float   y = baseColormap[j * 3 + 0];
       float   uTmp = baseColormap[j * 3 + 1];
       float   vTmp = baseColormap[j * 3 + 2];
-      if (i >= 0x0800) {
+      if (i & 0x0800) {
         if (i < 0x0C00) {
           uTmp = uTmp - 0.11314f;       // add PAL burst (135 degrees)
           vTmp = vTmp + 0.11314f;
@@ -300,28 +297,23 @@ namespace Plus4Emu {
       float   v = uTmp * im + vTmp * re;
       u = u * uScaleTable[k];
       v = v * vScaleTable[k];
-      {
-        float   r = (v / 0.877f) + y;
-        float   b = (u / 0.492f) + y;
-        float   g = (y - ((r * 0.299f) + (b * 0.114f))) / 0.587f;
-        displayParameters.applyColorCorrection(r, g, b);
-        y = (0.299f * r) + (0.587f * g) + (0.114f * b);
-        u = 0.492f * (b - y);
-        v = 0.877f * (r - y);
-      }
-      y = y * yScaleTable[k];
-      u = u * yScaleTable[k];
-      v = v * yScaleTable[k];
       if (!yuvFormat) {
-        // R = (V / 0.877) + Y
-        // B = (U / 0.492) + Y
-        // G = (Y - ((R * 0.299) + (B * 0.114))) / 0.587
-        float   r = (v / 0.877f) + y;
-        float   b = (u / 0.492f) + y;
-        float   g = (y - ((r * 0.299f) + (b * 0.114f))) / 0.587f;
+        float   r = 0.0f, g = 0.0f, b = 0.0f;
+        displayParameters.yuvToRGBWithColorCorrection(r, g, b, y, u, v);
+        r = r * yScaleTable[k];
+        g = g * yScaleTable[k];
+        b = b * yScaleTable[k];
         colormapData[i] = pixelConv(r, g, b);
       }
       else {
+        float   r = 0.0f, g = 0.0f, b = 0.0f;
+        displayParameters.yuvToRGBWithColorCorrection(r, g, b, y, u, v);
+        y = (0.299f * r) + (0.587f * g) + (0.114f * b);
+        u = 0.492f * (b - y);
+        v = 0.877f * (r - y);
+        y = y * yScaleTable[k];
+        u = u * yScaleTable[k];
+        v = v * yScaleTable[k];
         u = (u + 0.435912f) * 1.147020f;
         v = (v + 0.614777f) * 0.813303f;
         colormapData[i] = pixelConv(y, u, v);
