@@ -1,6 +1,8 @@
 Changes in version 1.2.3
 ------------------------
 
+  * more accurate colors in NTSC mode
+
 Changes in version 1.2.2
 ------------------------
 
